--- a/roles/microcloud/templates/00-installer-config.yaml.j2
+++ b/roles/microcloud/templates/00-installer-config.yaml.j2
@@ -4,5 +4,5 @@ network:
       dhcp4: true
     {{ microovn_interface }}:
       dhcp6: false
-      accept-ra: 0
+      accept-ra: false
   version: 2
