More fixes and updates

--- a/roles/ldap-server/templates/ldapscripts.conf.j2
+++ b/roles/ldap-server/templates/ldapscripts.conf.j2
@@ -157,7 +157,7 @@ GETENTGRCMD=""
 # Leave empty to use default templates
 # See *.template.sample for default templates
 #GTEMPLATE="/path/to/ldapaddgroup.template"
-UTEMPLATE="/path/to/ldapadduser.template"
+UTEMPLATE="/etc/ldapscripts/ldapadduser.template"
 #MTEMPLATE="/path/to/ldapaddmachine.template"
 GTEMPLATE=""
 UTEMPLATE=""
