--- a/roles/microcloud/templates/00-installer-config.yaml.j2
+++ b/roles/microcloud/templates/00-installer-config.yaml.j2
@@ -3,6 +3,7 @@ network:
     {{ main_interface }}:
       dhcp4: true
     {{ microovn_interface }}:
+      dhcp4: false
       dhcp6: false
       accept-ra: false
   version: 2
