Setting up the propoer way to deploy TLS certs and keys

--- a/roles/ldap-client/templates/ldap.conf.j2
+++ b/roles/ldap-client/templates/ldap.conf.j2
@@ -13,5 +13,5 @@ URI {{ ldap_uri }}
 #DEREF		never
 
 # TLS certificates (needed for GnuTLS)
-TLS_CACERT	/etc/ssl/certs/chain1.pem
+TLS_CACERT	/etc/ssl/certs/chain.pem
 
