Setup for smallstep ca and running docker

--- a/roles/auth-server/templates/config.ldif.j2
+++ b/roles/auth-server/templates/config.ldif.j2
@@ -63,7 +63,7 @@ objectClass: olcDatabaseConfig
 objectClass: olcMdbConfig
 olcDatabase: {1}mdb
 olcDbDirectory: /var/lib/ldap
-olcSuffix: dc=moyer,dc=wtf
+olcSuffix: {{ ldap_base_dn }}
 olcAccess: {0}to attrs=userPassword by self write by anonymous auth by * none
 olcAccess: {1}to attrs=shadowLastChange by self write by * read
 olcAccess: {2}to * by * read
